CI: Run test suite on Java 8 matrix; make tests Java 8 compatible.